src/parser/antlr/CommandsParser.py
# Generated from Commands.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CommandsParser ( Parser ):

    grammarFileName = "Commands.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\\n'", "';'", "'|'", "'<'", "'>'", "'*'", 
                     "'`'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "WORD", "WHITESPACE", "QUOTEDTEXT" ]

    RULE_prog = 0
    RULE_terminal = 1
    RULE_combine = 2
    RULE_instuctions = 3
    RULE_pipe = 4
    RULE_command = 5
    RULE_app = 6
    RULE_args = 7
    RULE_redir_in = 8
    RULE_redir_out = 9
    RULE_globbed = 10
    RULE_atom = 11
    RULE_substituted = 12

    ruleNames =  [ "prog", "terminal", "combine", "instuctions", "pipe", 
                   "command", "app", "args", "redir_in", "redir_out", "globbed", 
                   "atom", "substituted" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    WORD=8
    WHITESPACE=9
    QUOTEDTEXT=10

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def terminal(self):
            return self.getTypedRuleContext(CommandsParser.TerminalContext,0)


        def EOF(self):
            return self.getToken(CommandsParser.EOF, 0)

        def getRuleIndex(self):
            return CommandsParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = CommandsParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.terminal()
            self.state = 27
            _la = self._input.LA(1)
            if not(_la==-1 or _la==1):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TerminalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instuctions(self):
            return self.getTypedRuleContext(CommandsParser.InstuctionsContext,0)


        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(CommandsParser.WHITESPACE)
            else:
                return self.getToken(CommandsParser.WHITESPACE, i)

        def combine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandsParser.CombineContext)
            else:
                return self.getTypedRuleContext(CommandsParser.CombineContext,i)


        def getRuleIndex(self):
            return CommandsParser.RULE_terminal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerminal" ):
                listener.enterTerminal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerminal" ):
                listener.exitTerminal(self)




    def terminal(self):

        localctx = CommandsParser.TerminalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_terminal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 29
                self.match(CommandsParser.WHITESPACE)


            self.state = 35
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 32
                    self.combine() 
                self.state = 37
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 38
            self.instuctions()
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 39
                self.match(CommandsParser.WHITESPACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CombineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instuctions(self):
            return self.getTypedRuleContext(CommandsParser.InstuctionsContext,0)


        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(CommandsParser.WHITESPACE)
            else:
                return self.getToken(CommandsParser.WHITESPACE, i)

        def getRuleIndex(self):
            return CommandsParser.RULE_combine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCombine" ):
                listener.enterCombine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCombine" ):
                listener.exitCombine(self)




    def combine(self):

        localctx = CommandsParser.CombineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_combine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.instuctions()
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 43
                self.match(CommandsParser.WHITESPACE)


            self.state = 46
            self.match(CommandsParser.T__1)
            self.state = 48
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 47
                self.match(CommandsParser.WHITESPACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstuctionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self):
            return self.getTypedRuleContext(CommandsParser.CommandContext,0)


        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(CommandsParser.WHITESPACE)
            else:
                return self.getToken(CommandsParser.WHITESPACE, i)

        def pipe(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandsParser.PipeContext)
            else:
                return self.getTypedRuleContext(CommandsParser.PipeContext,i)


        def getRuleIndex(self):
            return CommandsParser.RULE_instuctions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstuctions" ):
                listener.enterInstuctions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstuctions" ):
                listener.exitInstuctions(self)




    def instuctions(self):

        localctx = CommandsParser.InstuctionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_instuctions)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 50
                self.match(CommandsParser.WHITESPACE)


            self.state = 56
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 53
                    self.pipe() 
                self.state = 58
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 59
            self.command()
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 60
                self.match(CommandsParser.WHITESPACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PipeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self):
            return self.getTypedRuleContext(CommandsParser.CommandContext,0)


        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(CommandsParser.WHITESPACE)
            else:
                return self.getToken(CommandsParser.WHITESPACE, i)

        def getRuleIndex(self):
            return CommandsParser.RULE_pipe

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPipe" ):
                listener.enterPipe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPipe" ):
                listener.exitPipe(self)




    def pipe(self):

        localctx = CommandsParser.PipeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_pipe)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.command()
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 64
                self.match(CommandsParser.WHITESPACE)


            self.state = 67
            self.match(CommandsParser.T__2)
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 68
                self.match(CommandsParser.WHITESPACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def app(self):
            return self.getTypedRuleContext(CommandsParser.AppContext,0)


        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(CommandsParser.WHITESPACE)
            else:
                return self.getToken(CommandsParser.WHITESPACE, i)

        def args(self):
            return self.getTypedRuleContext(CommandsParser.ArgsContext,0)


        def redir_in(self):
            return self.getTypedRuleContext(CommandsParser.Redir_inContext,0)


        def redir_out(self):
            return self.getTypedRuleContext(CommandsParser.Redir_outContext,0)


        def getRuleIndex(self):
            return CommandsParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)




    def command(self):

        localctx = CommandsParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_command)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 71
                self.match(CommandsParser.WHITESPACE)


            self.state = 74
            self.app()
            self.state = 76
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 75
                self.args()


            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 78
                self.match(CommandsParser.WHITESPACE)
                self.state = 79
                self.redir_in()


            self.state = 84
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 82
                self.match(CommandsParser.WHITESPACE)
                self.state = 83
                self.redir_out()


            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 86
                self.match(CommandsParser.WHITESPACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AppContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(CommandsParser.AtomContext,0)


        def getRuleIndex(self):
            return CommandsParser.RULE_app

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterApp" ):
                listener.enterApp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitApp" ):
                listener.exitApp(self)




    def app(self):

        localctx = CommandsParser.AppContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_app)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.atom(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(CommandsParser.WHITESPACE)
            else:
                return self.getToken(CommandsParser.WHITESPACE, i)

        def atom(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandsParser.AtomContext)
            else:
                return self.getTypedRuleContext(CommandsParser.AtomContext,i)


        def globbed(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandsParser.GlobbedContext)
            else:
                return self.getTypedRuleContext(CommandsParser.GlobbedContext,i)


        def getRuleIndex(self):
            return CommandsParser.RULE_args

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs" ):
                listener.enterArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgs" ):
                listener.exitArgs(self)




    def args(self):

        localctx = CommandsParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_args)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 91
                    self.match(CommandsParser.WHITESPACE)
                    self.state = 94
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
                    if la_ == 1:
                        self.state = 92
                        self.atom(0)
                        pass

                    elif la_ == 2:
                        self.state = 93
                        self.globbed()
                        pass



                else:
                    raise NoViableAltException(self)
                self.state = 98 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Redir_inContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(CommandsParser.AtomContext,0)


        def WHITESPACE(self):
            return self.getToken(CommandsParser.WHITESPACE, 0)

        def getRuleIndex(self):
            return CommandsParser.RULE_redir_in

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRedir_in" ):
                listener.enterRedir_in(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRedir_in" ):
                listener.exitRedir_in(self)




    def redir_in(self):

        localctx = CommandsParser.Redir_inContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_redir_in)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(CommandsParser.T__3)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 101
                self.match(CommandsParser.WHITESPACE)


            self.state = 104
            self.atom(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Redir_outContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(CommandsParser.AtomContext,0)


        def WHITESPACE(self):
            return self.getToken(CommandsParser.WHITESPACE, 0)

        def getRuleIndex(self):
            return CommandsParser.RULE_redir_out

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRedir_out" ):
                listener.enterRedir_out(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRedir_out" ):
                listener.exitRedir_out(self)




    def redir_out(self):

        localctx = CommandsParser.Redir_outContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_redir_out)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(CommandsParser.T__4)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 107
                self.match(CommandsParser.WHITESPACE)


            self.state = 110
            self.atom(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobbedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CommandsParser.RULE_globbed

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobbed" ):
                listener.enterGlobbed(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobbed" ):
                listener.exitGlobbed(self)




    def globbed(self):

        localctx = CommandsParser.GlobbedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_globbed)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(CommandsParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(CommandsParser.WORD, 0)

        def QUOTEDTEXT(self):
            return self.getToken(CommandsParser.QUOTEDTEXT, 0)

        def substituted(self):
            return self.getTypedRuleContext(CommandsParser.SubstitutedContext,0)


        def atom(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandsParser.AtomContext)
            else:
                return self.getTypedRuleContext(CommandsParser.AtomContext,i)


        def globbed(self):
            return self.getTypedRuleContext(CommandsParser.GlobbedContext,0)


        def getRuleIndex(self):
            return CommandsParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)



    def atom(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CommandsParser.AtomContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_atom, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.state = 115
                self.match(CommandsParser.WORD)
                pass
            elif token in [10]:
                self.state = 116
                self.match(CommandsParser.QUOTEDTEXT)
                pass
            elif token in [7]:
                self.state = 117
                self.substituted()
                self.state = 119
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
                if la_ == 1:
                    self.state = 118
                    self.atom(0)


                pass
            elif token in [6]:
                self.state = 121
                self.globbed()
                self.state = 123
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
                if la_ == 1:
                    self.state = 122
                    self.atom(0)


                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 139
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,25,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 137
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,24,self._ctx)
                    if la_ == 1:
                        localctx = CommandsParser.AtomContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_atom)
                        self.state = 127
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 128
                        self.substituted()
                        self.state = 130
                        self._errHandler.sync(self)
                        la_ = self._interp.adaptivePredict(self._input,22,self._ctx)
                        if la_ == 1:
                            self.state = 129
                            self.atom(0)


                        pass

                    elif la_ == 2:
                        localctx = CommandsParser.AtomContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_atom)
                        self.state = 132
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 133
                        self.globbed()
                        self.state = 135
                        self._errHandler.sync(self)
                        la_ = self._interp.adaptivePredict(self._input,23,self._ctx)
                        if la_ == 1:
                            self.state = 134
                            self.atom(0)


                        pass

             
                self.state = 141
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,25,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class SubstitutedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def terminal(self):
            return self.getTypedRuleContext(CommandsParser.TerminalContext,0)


        def getRuleIndex(self):
            return CommandsParser.RULE_substituted

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubstituted" ):
                listener.enterSubstituted(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubstituted" ):
                listener.exitSubstituted(self)




    def substituted(self):

        localctx = CommandsParser.SubstitutedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_substituted)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(CommandsParser.T__6)
            self.state = 143
            self.terminal()
            self.state = 144
            self.match(CommandsParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[11] = self.atom_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def atom_sempred(self, localctx:AtomContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 2)
         




